--- a/src/styles/test.less
+++ b/src/styles/test.less
@@ -1,4 +1,9 @@
 body{
-    color:skyblue;
+    // color:skyblue;
     background: skyblue;
+}
+.test{
+    font-size: 20px;
+    display:flex;
+    color:red;
 }
